--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "#Probability success 1st trial = 0.5\n",
+    "#Probability of no success on 1st and 2nd trial: (0.5)(0.5)= 0.25\n",
+    "#Probability_Success_Trial1 + Probability_No_success_Trial_1_and_2 + Probability_Success_Trial_2 = 1:\n",
+    "# 0.5 + 0.25 + Probability_Success_Trial_2 = 1\n",
+    "Probability_Success_Trial_2 = 0.25"
    ]
   },
   {
@@ -93,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "#3rd_trial = (0.5)**3 = .125\n",
+    "#5th_trail = (.5)**5"
    ]
   },
   {
@@ -106,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +119,10 @@
     "    \"\"\"y is a discrete random variable. It should be an integer that is greater then zero.\n",
     "    p is the probability of a success for the Bernoulli experiment to be conducted.\n",
     "    This function should return the probability that the first successful Bernoulli experiment will occur on the yth trial.\"\"\"\n",
-    "    prob = #The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
+    "    probability_failures_all_previous = (1-p)**(y-1)\n",
+    "    probability_success_this_trial = p\n",
+    "    overall_prob = probability_failures_all_previous * probability_success_this_trial\n",
+    "    prob = overall_prob#The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
     "    return prob"
    ]
   },
@@ -128,12 +136,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8554687500000146e-12\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(10, .95)\n",
+    "print(prob)"
    ]
   },
   {
@@ -146,12 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3584859224085419"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    ".95**20"
    ]
   },
   {
@@ -165,12 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.35848592240854255\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code and answer here\n",
-    "prob = "
+    "prob_no_failures = 1\n",
+    "for i in range(1,21):\n",
+    "    prob_first_failure_now = geometric_dist(i, .05)\n",
+    "    prob_no_failures -= prob_first_failure_now\n",
+    "print(prob_no_failures)    "
    ]
   },
   {
@@ -183,12 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16806999999999994\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = .7**5\n",
+    "print(prob)"
    ]
   },
   {
@@ -203,9 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -217,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
